--- a/src/components/Company/company.css
+++ b/src/components/Company/company.css
@@ -1,4 +1,4 @@
-.main{
+.main {
     height: 100vh;
     width: 100%;
     display: flex;
@@ -6,7 +6,8 @@
     align-items: center;
     justify-content: center;
 }
-.home-btn{
+
+.home-btn {
     padding: 20px;
     background-color: black;
     border: none;
@@ -15,9 +16,30 @@
     margin-bottom: 15px;
     cursor: pointer;
 }
-.modal{
+
+.modal {
     position: absolute;
     top: 0;
     left: 0;
     z-index: 1;
+}
+
+.your-comp-cont {
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+    border: 1px solid black;
+    padding: 10px;
+    border-radius: 10px;
+    width: 50%;
+    align-items: center;
+    justify-content: center;
+}
+.your-comp-cont span{
+    margin: 10px 0;
+}
+.your-comp-cont button{
+    background-color: black;
+    padding: 10px 20px;
+    margin-left: 100px;
 }
