--- a/src/components/User/user.css
+++ b/src/components/User/user.css
@@ -1,10 +1,14 @@
 .main{
-    height: 100vh;
+    position: relative;
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+h2{
+    margin: 100px 0 0 0;
+    padding: 0;
 }
 .home-btn{
     padding: 20px;
@@ -32,6 +36,7 @@ select{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-color: white;
 }
 .details{
     display: flex;
@@ -39,4 +44,23 @@ select{
 }
 .details span{
     margin: 5px 0;
+}
+.comp-card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 80%;
+}
+.comp-card ul{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+}
+.comp-card ul li{
+    border: 1px solid black;
+    border-radius: 10px;
+    margin: 5ox 0;
+    padding: 20px;
 }
